--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "Chrome PuouchDB Fauxton Helper",
+    "name": "Chrome PuouchDB Helper",
     "description": "An extension to store and retrieve fauxton queries in chrome",
     "version": "1.0",
     "manifest_version": 2,
-    "action": {
+    "browser_action": {
         "default_popup": "index.html",
         "default_title": "Open the popup"
     },
@@ -16,7 +16,8 @@
         "activeTab",
         "webRequest",
         "<all_urls>",
-        "webRequestBlocking"
+        "webRequestBlocking",
+        "storage"
     ],
     "background": {
         "scripts": ["./static/js/background.js"]
@@ -26,5 +27,6 @@
             "matches": ["http://*/*", "https://*/*"],
             "js": ["./static/js/content.js"]
         }
-    ]
+    ],
+    "web_accessible_resources": ["injected.js"]
 }
