--- a/src/manifest.json
+++ b/src/manifest.json
@@ -8,10 +8,9 @@
         "default_title": "Open the popup"
     },
     "icons": {
-        "16": "logo192.png",
-        "48": "logo192.png",
-        "128": "logo192.png"
+        "128": "icon-192x192.png"
     },
+
     "permissions": [
         "activeTab",
         "webRequest",
